services/forum/k8s/overlays/dev/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-web
spec:
  template:
    spec:
      containers:
      - name: php-fpm
